testing/syntax-error/python/syntax_error2.py
# Raspberry Pi Foundation
# Developed to be used alongside Isaac Computer Science,
# part of the National Centre for Computing Education
# Usage licensed under CC BY-SA 4
# https://isaaccomputerscience.org/concepts/prog_softeng_debug

name = input("Please enter your name: ")
if name == "Ada"
    print("Hi Ada, you are one of my heroes!")
else:
    print("Hello ", name)
